--- a/web_app/src/globals.css
+++ b/web_app/src/globals.css
@@ -48,7 +48,7 @@ html { font-family: "Inter", "system-ui"; overflow: hidden; }
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
  
-    --primary: 48 100.0% 50.0%;
+    --primary: 221 94% 60%;
     --primary-foreground: 210 20% 98%;
  
     --secondary: 220 14.3% 95.9%;
@@ -78,9 +78,9 @@ html { font-family: "Inter", "system-ui"; overflow: hidden; }
     --card-foreground: 210 20% 98%;
  
     --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;;
+    --popover-foreground: 0 0% 98%;
  
-    --primary: 48 100.0% 50.0%;
+    --primary: 221 94% 60%;
     --primary-foreground: 220.9 39.3% 11%;
  
     --secondary: 240 3.7% 15.9%;
