--- a/web_app/src/globals.css
+++ b/web_app/src/globals.css
@@ -49,7 +49,12 @@ html { font-family: "Inter", "system-ui"; overflow: hidden; }
     --popover-foreground: 224 71.4% 4.1%;
  
     --primary: 221 94% 60%;
-    --primary-foreground: 210 20% 98%;
+    --primary-foreground: 299 100% 100%;
+
+    --blue-500: 224 94% 49%;
+    --gray-400: 221 14% 60%;
+    --gray-700: 231 14% 29%;
+    --gray-800: 231 14% 20%;
  
     --secondary: 220 14.3% 95.9%;
     --secondary-foreground: 220.9 39.3% 11%;
@@ -85,6 +90,11 @@ html { font-family: "Inter", "system-ui"; overflow: hidden; }
  
     --primary: 221 94% 60%;
     --primary-foreground: 220.9 39.3% 11%;
+
+    --blue-500: 224 94% 49%;
+    --gray-400: 221 14% 60%;
+    --gray-700: 231 14% 29%;
+    --gray-800: 231 14% 20%;
  
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
